--- a/python/intro.ipynb
+++ b/python/intro.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "be08d11c",
    "metadata": {},
    "outputs": [
@@ -33,10 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3dda763c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your favorite crypto asset is: solana\n"
+     ]
+    }
+   ],
    "source": [
     "crypto = input(\"Enter your favorite crypto asset: \")\n",
     "print(f'Your favorite crypto asset is: {crypto}')"
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "963e54f2",
    "metadata": {},
    "outputs": [
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "10582ba4",
    "metadata": {},
    "outputs": [
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9216bc14",
    "metadata": {},
    "outputs": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ec3cf0e9",
    "metadata": {},
    "outputs": [
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8e6c6a9c",
    "metadata": {},
    "outputs": [],
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9375156f",
    "metadata": {},
    "outputs": [
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5105ef19",
    "metadata": {},
    "outputs": [],
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d7a02661",
    "metadata": {},
    "outputs": [],
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3548b4ee",
    "metadata": {},
    "outputs": [
@@ -274,19 +282,19 @@
        "['Bitcoin', 'Ethereum', 'Litecoin']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cryptos = [\"Bitcoin\", \"Ethereum\", \"Litecoin\"]  # This is a list variable\n",
-    "cryptos\n"
+    "cryptos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ead92bbf",
    "metadata": {},
    "outputs": [
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c8fec950",
    "metadata": {},
    "outputs": [],
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e9f5d74c",
    "metadata": {},
    "outputs": [],
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "16f55492",
    "metadata": {},
    "outputs": [
@@ -363,12 +371,12 @@
    ],
    "source": [
     "age = 90\n",
-    "print(type(age))  # This will print <class 'int'>\n"
+    "print(type(age))  # This will print <class 'int'>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "49d48b28",
    "metadata": {},
    "outputs": [
@@ -376,7 +384,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'> 30 ['Alice', 'Bob', 'Charlie'] {'name': 'Alice', 'age': 30}\n"
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -404,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "7cb63c9c",
    "metadata": {},
    "outputs": [
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "87166d73",
    "metadata": {},
    "outputs": [
@@ -442,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "161efbf5",
    "metadata": {},
    "outputs": [
@@ -462,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "b2e11f0b",
    "metadata": {},
    "outputs": [
